feat(button.cy.ts): Message changed
- Prueba del componente MessageComponent
- Debe cambiar el mensaje al hacer clic en el botón

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,2 @@
-<div>
-  <h1>{{ message}}</h1>
-  <button (click)="changeMessage()">Click Me</button>
-</div>
+<h1>Componente Principal</h1>
+<app-message></app-message>
